--- a/Adjust/settings.gradle
+++ b/Adjust/settings.gradle
@@ -1,1 +1,1 @@
-include ':adjust', ':test', ':example'
+include ':adjust', ':criteoplugin', ':sociomanticplugin', ':trademobplugin', ':test', ':example'
