--- a/Adjust/test/src/main/AndroidManifest.xml
+++ b/Adjust/test/src/main/AndroidManifest.xml
@@ -17,6 +17,18 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <!--
+                 note that the leading "/" is required for pathPrefix
+                 Accepts URIs that begin with "example://”
+                -->
+                <data android:scheme="adjustTestSchema" />
+            </intent-filter>
+
         </activity>
     </application>
 
