--- a/Adjust/adjust/src/main/AndroidManifest.xml
+++ b/Adjust/adjust/src/main/AndroidManifest.xml
@@ -1,10 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.adjust.sdk">
 
-    <application />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <uses-sdk
         android:minSdkVersion="9"
-        android:targetSdkVersion="21" />
+        android:targetSdkVersion="24" />
+    <application />
 </manifest>
