--- a/Adjust/gradle.properties
+++ b/Adjust/gradle.properties
@@ -16,3 +16,19 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+RELEASE_REPOSITORY_URL=http://nexus.russia:8081/nexus/content/repositories/releases/
+SNAPSHOT_REPOSITORY_URL=http://nexus.russia:8081/nexus/content/repositories/snapshots/
+GROUP=Adjust
+POM_DESCRIPTION=Adjust Build for lazada app
+POM_PACKAGING=aar
+POM_URL=http://www.adjust.com
+POM_SCM_URL=https://github.com/adjust/android_sdk.git
+POM_SCM_CONNECTION=https://github.com/adjust/android_sdk.git
+POM_SCM_DEV_CONNECTION=https://github.com/adjust/android_sdk.git
+POM_LICENCE_NAME=MIT-LICENSE
+POM_LICENCE_URL=https://github.com/adjust/android_sdk/blob/master/MIT-LICENSE
+POM_LICENCE_DIST=repo
+POM_DEVELOPER_ID=Adjust
+POM_DEVELOPER_NAME=Adjust
+
