--- a/Adjust/sociomanticplugin/build.gradle
+++ b/Adjust/sociomanticplugin/build.gradle
@@ -20,3 +20,4 @@ dependencies {
     compile project(':adjust')
 }
 
+apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/master/gradle-mvn-push.gradle'
