--- a/Adjust/trademobplugin/build.gradle
+++ b/Adjust/trademobplugin/build.gradle
@@ -19,3 +19,5 @@ task jar(type: Jar) {
 dependencies {
     compile project(':adjust')
 }
+
+apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/master/gradle-mvn-push.gradle'
